# fastapi_chat

./: .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
app/: app.py  config.py  database.py
app/auth/: models.py  schemas.py  utils.py
migrations/: env.py
